# MatrixMulti

./: CMakeLists.txt  README.md  all.cpp  build.sh  run.sh
inc/: MM_neon.h  MM_openmp.h  MM_paral.h  MM_pthreads.h  MM_tile.h  matrix_def.h
output/: output1.txt
performance_test/: Makefile  README.md  kernel_1.s  kernel_3.s  kernel_4.s  main.c
performance_test/FLOPS/: Makefile  build.sh  kernel_1.s  kernel_2.s  main.c
src/: MM_neon.cpp  MM_openmp.cpp  MM_pthreads.cpp
test/: independent_test.cpp  independent_test_f32.cpp  independent_test_s32.cpp  unit_test.cpp  ye.cpp
